new version to start new Rserve ... sigh ...
git-svn-id: svn://svn.rforge.net/org/trunk@2759 955e8658-2bef-402f-a597-8b5c18d8b76d